# coding-agents

./: .gitignore  AGENTS.md  CR.md  CURRENT_WORK.md  README.md  development.md  main.py  pyproject.toml
.github/workflows/: ci.yml
coding_agents/: __init__.py  agent_factory.py  artifacts.py  checkpoints.py  cli.py  config.py  env.py  harness.py  messages.py  paths.py  permissions.py  prompts.py  readiness.py  redaction.py  resident_agents.py  safe_filesystem.py  scout.py  team.py  tools.py  vanilla_agent.py
coding_agents/team_instanciator/: __init__.py  agent_graph.py  agent_graph_registry.py  agent_runtime_resolver.py  backend_factory.py  builtin_tool_factory.py  checkpoint_metadata_factory.py  checkpointer_factory.py  checkpointer_handle.py  cli.py  custom_tool_context.py  custom_tool_factory.py  deep_agent_factory.py  dotenv_loader.py  instantiated_team.py  langchain_agent_factory.py  memory_resolver.py  model_resolver.py  permissions_factory.py  relation_tool.py  relation_tool_factory.py  root_dir_resolver.py  runtime_configuration_validator.py  scoped_read_tools_factory.py  skills_resolver.py  subagent_factory.py  team_instanciator.py  team_runtime_manifest.py  team_runtime_manifest_builder.py  team_runtime_manifest_store.py  thread_id_factory.py  toolset_resolver.py
coding_agents/team_loader/: agent_definition.py  agent_mdc.md  agent_reference.py  agent_state.py  checkpointer_default.py  custom_tool_definition.py  mdc_parser.py  reasoning_effort_default.py  team_defaults.py  team_loader_error.py  team_yaml.md  template_renderer.py  yaml_parser.py
docs/: agent_mdc.md  agent_skills.md  async-sqlite-checkpointer-plan.md  deep-agents-tool-visibility.md  development-agent-team-architecture.md  mention-router-spec.md  model-reliability-policy.md  relation-tool-history.md  studio-branching-agent-history.md  team-package-sharing.md  team-working-directory-scope.md  team-yaml-mcp-tools-plan.md  team_yaml.md  webapp-studio-reference-autocomplete.md  webapp-studio-team-discovery.md  webapp-studio-ui-improvements.md
src/: type_defs.py
src/webapp/: __init__.py  (+1 more)
tests/: support.py  test_agent_team_wiring.py  test_artifacts.py  test_checkpoints.py  test_cli.py  test_custom_tool_context.py  test_edge_cases.py  test_harness.py  test_model_resolver.py  test_permissions.py  test_philosophers_team.py  test_readiness.py  test_reasoning_summaries.py  test_redaction.py  test_safe_filesystem.py  test_scoped_read_tools_factory.py  test_scout.py  test_team_governance.py  test_tools.py  test_vanilla_agent.py  test_webui_pricing.py  test_webui_server.py
webui/: README.md  pricing.py  server.py
(+483 files in other folders)
