[project]
name = "coding-agents"
version = "0.1.0"
description = "Reusable development-agent team built on LangChain Deep Agents"
readme = "README.md"
requires-python = ">=3.11,<4.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "deepagents>=0.6.3",
    "fastapi>=0.136.3",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.2.1",
    "langgraph-checkpoint-postgres>=3.1.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "pydantic>=2.13.4",
    "tavily-python>=0.7.24",
    "uvicorn[standard]>=0.48.0",
]

[dependency-groups]
dev = [
    "coverage[toml]>=7.8",
]

[project.scripts]
coding-agents = "src.team_instanciator.interfaces.cli:main"
webapp-studio = "src.webapp_studio.server:main"

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
